data/all_generated_tests/raw_wast_tests/block_StackCorruption_1899.wast
;; 10. **Test Description**: Construct a scenario where a block contains an improperly terminated instruction sequence within a `try` block, branching out to `catch` or `end` sections. This tests the correct stack depth restoration and label stack integrity even in error-induced control flows.

(assert_invalid
  (module
    (func $invalid-block-with-try (result i32)
      (block (result i32)
        (try 
          (do 
            (i32.const 10)
            (i32.const 20)
            (br 0)
          )
          (catch (i32.add) (i32.const 30))
        )
        (i32.const 40)
      )
    )
  )
  "type mismatch"
)